--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -1,24 +1,45 @@
 .navList {
   display: none;
-  font-family: 'Poppins', sans-serif;
-  padding: 10px 20px;
-  min-height: 70px;
-}
-
-.logo {
-  font-size: 1.25rem;
-  font-weight: 600;
+  font-family: var(--font-text);
+  padding: 1.25rem 0;
 }
 
 .number {
   margin-right: 0.25rem;
 }
 
-.navItem {
-  font-size: 1.25rem;
+.menuItem {
+  font-size: 1rem;
   font-weight: 400;
-  padding-bottom: -1px;
-  border-bottom: 2px solid blue;
+}
+
+.menuLink {
+  --color-hover: rgb(86, 17, 53);
+  position: relative;
+  text-decoration: none;
+  color: rgb(43, 43, 43);
+  transition: color 200ms ease-in-out
+}
+
+.menuLink::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: -2px;
+  height: 2px;
+  background-color: var(--color-hover);
+  border-radius: 0.125rem;
+  transform: scaleX(0);
+  transition: transform 200ms ease-in-out;
+}
+
+.menuLink:hover {
+  color: var(--color-hover);
+}
+
+.menuLink:hover::before {
+  transform: scaleX(1);
 }
 
 @media screen and (min-width: 48rem) {
@@ -26,6 +47,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 40px;
+    gap: 2rem;
   }
 }
