--- a/src/components/SocialMediaButton/SocialMediaButton.module.css
+++ b/src/components/SocialMediaButton/SocialMediaButton.module.css
@@ -12,6 +12,10 @@
   background-color: var(--clr-light-gray);
 }
 
+.link:active .iconWrapper {
+  transform: scale(0.8);
+}
+
 .content {
   --padding: 0.75rem;
 
