--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,3 +1,14 @@
+.header {
+  position: sticky;
+  top: 0;
+  background-color: var(--clr-white);
+  z-index: var(--z-index-header);
+}
+
+.header.scrolled {
+  box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.2);
+}
+
 .headerWrapper {
   display: flex;
   align-items: center;
