--- a/src/components/Logo/Logo.module.css
+++ b/src/components/Logo/Logo.module.css
@@ -3,7 +3,7 @@
   display: inline-flex;
   align-items: center;
   gap: 0.25rem;
-  color: rgb(72, 70, 72);
+  color: var(--dark-gray);
   text-decoration: none;
   outline: none;
 }
@@ -17,15 +17,16 @@
 }
 
 .logoText {
-  font-family: var(--font-headings);
-  font-weight: 700;
-  font-size: 1.5rem;
+  font-family: var(--ff-headings);
+  font-weight: var(--fw-bold);
+  font-size: var(--fs-md);
   text-transform: uppercase;
+  transition: color 200ms ease-in-out, transform 200ms ease-in-out;
 }
 
-.logoText:hover,
 .logo:active .logoText {
-  color: rgb(93, 93, 93);
+  color: var(--clr-gray);
+  transform: scale(0.85);
 }
 
 .iconWrapper {
@@ -49,15 +50,33 @@
   left: 50%;
   transform: translateX(var(--translateX)) translateY(var(--translateY))
     rotateX(var(--rotateX)) rotateZ(var(--rotateZ)) scale(var(--scale));
-  transition: transform 250ms ease-in;
+  transition: transform 200ms ease-in;
 }
 
-.iconWrapper:hover .star {
-  --offsetY: calc((var(--index) - 1) * 0.5625rem);
-  --translateY: calc(var(--offsetY) - 50%);
-  --rotateZ: -30deg;
+.star:nth-child(1) path {
+  fill: var(--clr-red);
+}
+
+.star:nth-child(2) path {
+  fill: var(--clr-purple);
+}
+
+.star:nth-child(3) path {
+  fill: var(--clr-turquoise);
 }
 
 .logo:active .star {
   --scale: 0.75;
+}
+
+@media (hover: hover) and (pointer: fine) {
+  .logoText:hover {
+    color: var(--clr-gray);
+  }
+
+  .iconWrapper:hover .star {
+    --offsetY: calc((var(--index) - 1) * 0.5625rem);
+    --translateY: calc(var(--offsetY) - 50%);
+    --rotateZ: -30deg;
+  }
 }
