--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -1,45 +1,42 @@
 .navList {
   display: none;
-  font-family: var(--font-text);
   padding: 1.25rem 0;
 }
 
-.number {
-  margin-right: 0.25rem;
-}
-
-.menuItem {
-  font-size: 1rem;
-  font-weight: 400;
-}
-
-.menuLink {
-  --color-hover: rgb(86, 17, 53);
+.navLink {
   position: relative;
+  font-family: var(--ff-text);
+  font-size: var(--fs-sm);
+  color: var(--clr-dark-gray);
   text-decoration: none;
-  color: rgb(43, 43, 43);
-  transition: color 200ms ease-in-out
+  transition: color 200ms ease-in-out;
 }
 
-.menuLink::before {
+.navLink::before {
   content: '';
   position: absolute;
   left: 0;
   right: 0;
   bottom: -2px;
   height: 2px;
-  background-color: var(--color-hover);
+  background-color: var(--clr-purple);
   border-radius: 0.125rem;
   transform: scaleX(0);
   transition: transform 200ms ease-in-out;
 }
 
-.menuLink:hover {
-  color: var(--color-hover);
+.navLink:active {
+  color: var(--clr-midnight-blue);
 }
 
-.menuLink:hover::before {
-  transform: scaleX(1);
+@media (hover: hover) and (pointer: fine) {
+  .navLink:hover {
+    color: var(--clr-midnight-blue);
+  }
+
+  .navLink:hover::before {
+    transform: scaleX(1);
+  }
 }
 
 @media screen and (min-width: 48rem) {
