--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -62,23 +62,46 @@
   text-transform: uppercase;
 }
 
+.bottomContent {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.heart {
+  font-size: inherit;
+  color: currentColor;
+  animation: pulsate 1500ms ease-in-out infinite;
+}
+
+@keyframes pulsate {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  50% {
+    transform: scale(1.2);
+    opacity: 0.8;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
 @keyframes giggle {
   0% {
     transform: rotate(0deg);
   }
-
   25% {
     transform: rotate(5deg);
   }
-
   50% {
     transform: rotate(-5deg);
   }
-
   75% {
     transform: rotate(5deg);
   }
-
   100% {
     transform: rotate(-5deg);
   }
