--- a/src/components/SocialMediaButton/SocialMediaButton.module.css
+++ b/src/components/SocialMediaButton/SocialMediaButton.module.css
@@ -33,7 +33,7 @@
   font-size: var(--fs-md);
   border-radius: 50%;
   overflow: hidden;
-  transition: transform 250ms ease-in-out;
+  transition: transform 200ms ease-in-out;
   transform-origin: center;
 }
 
@@ -49,7 +49,7 @@
 .text {
   font-size: var(--fs-xs);
   width: 0;
-  transition: width 200ms ease-in-out;
+  transition: width 200ms ease-in-out 200ms;
 }
 
 @media (hover: hover) and (pointer: fine) {
@@ -58,6 +58,6 @@
   }
 
   .link:hover .iconWrapper {
-    transform: scale(0.8);
+    transform: scale(0.7);
   }
 }
