--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -5,3 +5,28 @@
   color: var(--clr-gray);
   max-width: 60rem;
 }
+
+.content {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 1.5rem;
+  margin-top: 2rem;
+}
+
+@media screen and (min-width: 24rem) {
+  .content {
+    grid-template-columns: repeat(auto-fit, minmax(16rem, 1fr));
+  }
+}
+
+@media screen and (min-width: 48rem) {
+  .content {
+    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+  }
+}
+
+@media screen and (min-width: 60rem) {
+  .content {
+    grid-template-columns: repeat(auto-fit, minmax(24rem, 1fr));
+  }
+}
