--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -165,6 +165,28 @@
   --facing: 1;
 }
 
+.button {
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.125rem;
+  font-weight: 500;
+  padding: 1rem 2rem;
+  border-radius: 0.75rem;
+  background-color: var(--clr-dark);
+  color: var(--clr-white);
+  cursor: pointer;
+  border: 1px solid var(--clr-dark);
+  transition:
+    background-color 250ms ease-in,
+    transform 250ms ease-in;
+  outline-offset: 4px;
+}
+
+.button:hover {
+  transform: scale(0.95);
+  background-color: var(--clr-white);
+  color: var(--clr-dark);
+}
+
 /* Responsive Adjustments Using Media Queries */
 /* @media (max-width: 1024px) {
   .star {
