modify Header, Nav, and NavMobile components to utilize useActiveSection and useScrollOffset custom hooks

--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -29,6 +29,14 @@
   color: var(--clr-midnight-blue);
 }
 
+.navLink.active {
+  color: var(--clr-midnight-blue);
+}
+
+.navLink.active::before {
+  transform: scaleX(1);
+}
+
 @media (hover: hover) and (pointer: fine) {
   .navLink:hover {
     color: var(--clr-midnight-blue);
