--- a/src/components/NavMobile/NavMobile.module.css
+++ b/src/components/NavMobile/NavMobile.module.css
@@ -81,6 +81,10 @@
   text-decoration: none;
 }
 
+.itemLink.active {
+  text-decoration: underline;
+}
+
 .nav:hover .itemLink {
   opacity: 0.5;
 }
