--- a/src/components/Gallery/Gallery.module.css
+++ b/src/components/Gallery/Gallery.module.css
@@ -1,6 +1,6 @@
 .gallery {
   width: 100%;
-  margin: 4rem 0;
+  margin-top: 3rem;
   overflow: hidden;
 }
 
@@ -81,12 +81,12 @@
 
 @media (prefers-reduced-motion: no-preference) {
   .content {
-    animation: slideMobile 12s linear infinite 1s;
+    animation: slideMobile 18s linear infinite 1s;
   }
 }
 
 @media screen and (min-width: 48rem) and (prefers-reduced-motion: no-preference) {
   .content {
-    animation: slideDesktop 12s linear infinite 1s;
+    animation: slideDesktop 18s linear infinite 1s;
   }
 }
