--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -1,24 +1,95 @@
-/* AboutSection.module.css */
 .about {
-  padding: 50px 20px;
-  background-color: #f0f4f8; /* Light background for a personal touch */
-  color: #333; /* Dark text color */
-  text-align: center;
+  margin-top: clamp(2rem, 2rem + 3.3333vw, 5rem);
 }
 
-.aboutContent {
-  max-width: 800px;
+.content {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.details {
+  font-family: var(--ff-text);
+  font-weight: var(--fw-regular);
+  font-size: var(--fs-sm);
+  line-height: 1.5;
+  text-wrap: pretty;
+  color: var(--clr-darkish-gray);
+  margin-top: 1.25em;
+  max-width: 60rem;
+}
+
+.description + .description {
+  margin-top: 1.25em;
+}
+
+.button {
+  display: inline-block;
+  text-decoration: none;
+  padding: 0.75em 1em;
+  background-color: var(--clr-dark-gray);
+  font-size: var(--fs-xs);
+  color: var(--clr-white);
+  margin-top: 1.5rem;
+  border-radius: 0.375em;
+  cursor: pointer;
+  transition:
+    background-color 250ms ease,
+    color 250ms ease;
+}
+
+@media (hover: hover) and (pointer: fine) {
+  .button:hover {
+    background-color: var(--clr-dark);
+    color: pink;
+  }
+}
+
+.button:focus {
+  background-color: var(--clr-dark);
+  outline-offset: 3px;
+}
+
+.profileContainer {
+  position: relative;
+  width: 100%;
+  max-width: 30rem;
   margin: 0 auto;
+  color: var(--clr-lavender);
+  border-radius: 2rem;
+  overflow: hidden;
 }
 
-.aboutTitle {
-  font-size: 2.5rem;
-  color: #007bff; /* Accent color for the title */
-  margin-bottom: 20px;
+.profileImage {
+  position: relative;
+  width: 100%;
+  height: auto;
+  display: block;
+  z-index: var(--z-index-foreground);
 }
 
-.aboutText {
-  font-size: 1.2rem;
-  line-height: 1.6;
-  margin-bottom: 20px;
+.backgroundSVG {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: var(--z-index-default);
+}
+
+@media screen and (min-width: 80rem) {
+  .content {
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .details {
+    margin: 1.25em 0;
+  }
+
+  .profileContainer {
+    min-width: 40%;
+    order: -1;
+  }
 }
