--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,16 +1,16 @@
 .button {
   position: relative;
+  display: inline-block;
   font-family: var(--ff-headings);
-  font-size: 1.125rem;
-  font-weight: 500;
+  font-weight: var(--fw-medium);
+  font-size: var(--fs-md);
   text-decoration: none;
-  padding: 1rem 2rem;
+  padding: 0.75em 1.5em;
   border: none;
   border-radius: 0.75rem;
   background-color: transparent;
   color: var(--clr-white);
   cursor: pointer;
-  overflow: hidden;
   transition: transform 250ms ease-in;
   outline-offset: 4px;
 }
@@ -50,7 +50,6 @@
 
 .button:hover::before {
   --clr-border: var(--clr-dark-gray);
-  /* background-color: var(--clr-white); */
 }
 
 .button:hover::after {
